# ml-part-time

./: .gitignore  AdversarialCheckModel.py  README.md  Solver.py  SolverLayer.py  SolverLayerList.py  compare_against_gurobi.py  convert_and_save_solver_inputs.py  default_training_config.yaml  environment.yml  inputs_dataclasses.py  pyproject.toml  requirements.dev.txt  requirements.txt  solve.py  train.py  train_cifar100_resnet_small.py  train_conv_med.py  train_mnist_256x6.py  train_toy.py  utils.py
inputs/: conv_med.py  mnist_256x6.py  save_file_types.py  toy_example.onnx  toy_example.py
modules/: Solver.py  solver_layers.py  solver_utils.py
preprocessing/: preprocessing_utils.py  solver_inputs.py  solver_variables.py
src/: compare_against_gurobi.py  solve.py  train.py  train_mnist_256x6.py  train_toy.py  utils.py
src/inputs/: cifar100_resnet_small.py  conv_med.py  conv_med_gurobi_results.pth  conv_med_img67.py  conv_med_img67_gurobi_results.pth  conv_med_img7.py  conv_med_img7_gurobi_results.pth  mnist_256x6.py  mnist_256x6_gurobi_results.pth  save_file_types.py  toy_example.py  utils.py
src/inputs/data/: resnet_a_img67.onnx
src/modules/: AdversarialCheckModel.py  Solver.py  SolverLayerList.py  solver_layers.py
src/modules/solver_layers/: SolverInput.py  (+13 more)
src/preprocessing/: build.py  class_definitions.py  graph_converters.py  graph_module_wrapper.py  hwc_to_chw.py  linearize_conv2d.py  named_solver_inputs.py  preprocessing_utils.py  solver_inputs.py  solver_variables.py  transpose.py
src/training/: TrainingConfig.py  custom_lr_schedulers.py  train.py
